Committing with Oxygen XML Web Author

--- a/XHTML 1.0 Transitional.xhtml
+++ b/XHTML 1.0 Transitional.xhtml
@@ -5,6 +5,11 @@
     <head>
         <title></title>
     </head>
+    <math xmlns="http://www.w3.org/1998/Math/MathML">
+        <msqrt>
+            <mn>123</mn>
+        </msqrt>
+    </math>
     <body>
     </body>
 </html>
