Created file with oXygen XML Web Author.

--- a/test.xhtml
+++ b/test.xhtml
@@ -1,18 +1,17 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <div id="editor">
-        <p class="text"> Double click on the following formula to edit it.</p>
-        <!-- [html-validate-disable-next no-inline-style] -->
-        <p class="formula" style="text-align: center;">
-            <math><mi>x</mi><mo>=</mo><mfrac><mrow><mo>-</mo><mi>b</mi><mo>&PlusMinus;</mo><msqrt><msup><mi>b</mi><mn>2</mn></msup><mo>-</mo><mn>4</mn><mi>a</mi><mi>c</mi></msqrt></mrow><mrow><mn>2</mn><mi>a</mi></mrow></mfrac></math>
-        </p>
-    </div>
-</body>
+<html xmlns="http://www.w3.org/1999/xhtml">
+    <head>
+        <title></title>
+    </head>
+    <body><m:math xmlns:m="http://www.w3.org/1998/Math/MathML">
+            <m:msqrt>
+                <m:mn>123123</m:mn>
+            </m:msqrt>
+        </m:math>
+        <m:math class="wrs_chemistry" xmlns:m="http://www.w3.org/1998/Math/MathML">
+            <m:mi mathvariant="normal">O</m:mi>
+            <m:mo>&#x2206;</m:mo>
+            <m:mi mathvariant="normal">O</m:mi>
+        </m:math></body>
 </html>
