--- a/Firstxhtml.xhtml
+++ b/Firstxhtml.xhtml
@@ -4,6 +4,10 @@
     <head>
         <title></title>
     </head>
-    <body>
+    <body><math xmlns="http://www.w3.org/1998/Math/MathML">
+            <msqrt>
+                <mn>123</mn>
+            </msqrt>
+        </math>
     </body>
 </html>
