Committing with Oxygen XML Web Author

--- a/Firstxhtml.xhtml
+++ b/Firstxhtml.xhtml
@@ -6,8 +6,10 @@
     </head>
     <body><math xmlns="http://www.w3.org/1998/Math/MathML">
             <msqrt>
-                <mn>123</mn>
+                <mn>1</mn>
+                <mn>3</mn>
             </msqrt>
+            <mspace linebreak="newline"/>
         </math>
     </body>
 </html>
