Created file with oXygen XML Web Author.

--- a/XHTML 5.xhtml
+++ b/XHTML 5.xhtml
@@ -4,14 +4,6 @@
     <head>
         <title></title>
     </head>
-    <body><math xmlns="http://www.w3.org/1998/Math/MathML">
-            <msqrt>
-                <mn>123123</mn>
-            </msqrt>
-        </math><math xmlns="http://www.w3.org/1998/Math/MathML">
-            <msqrt>
-                <mn>123</mn>
-            </msqrt>
-        </math>
+    <body>
     </body>
 </html>
