Committing with Oxygen XML Web Author

--- a/Firstxhtml.xhtml
+++ b/Firstxhtml.xhtml
@@ -4,12 +4,5 @@
     <head>
         <title></title>
     </head>
-    <body><math xmlns="http://www.w3.org/1998/Math/MathML">
-            <msqrt>
-                <mn>1</mn>
-                <mn>3</mn>
-            </msqrt>
-            <mspace linebreak="newline"/>
-        </math>
-    </body>
+    <body></body>
 </html>
