Committing with Oxygen XML Web Author

--- a/Firstxhtml.xhtml
+++ b/Firstxhtml.xhtml
@@ -4,13 +4,20 @@
     <head>
         <title></title>
     </head>
-    <body><math xmlns="http://www.w3.org/1998/Math/MathML">
+    <body><math class="wrs_chemistry" xmlns="http://www.w3.org/1998/Math/MathML">
+            <mi mathvariant="normal">O</mi>
+            <mo>&#x2206;</mo>
+            <mo>&#xB0;</mo>
+            <mi>mol</mi>
+        </math><math xmlns="http://www.w3.org/1998/Math/MathML">
             <msqrt>
-                <mn>90909</mn>
+                <mn>1</mn>
+                <mfrac>
+                    <mn>1</mn>
+                    <mn>2</mn>
+                </mfrac>
             </msqrt>
         </math><math class="wrs_chemistry" xmlns="http://www.w3.org/1998/Math/MathML">
-            <mo>&#xB0;</mo>
-            <mo>&#x2206;</mo>
             <mo>&#xB0;</mo>
         </math></body>
 </html>
